# tgx

./: .gitignore  AGENTS.md  Box2.h  CMakeLists.txt  Color.cpp  Color.h  Doxyfile  Image.h  Mat4.h  Mesh3D.h  Misc.h  Programmation.lnk  README.md  Renderer3D.h  Vec2.h  Vec3.h  Vec4.h  library.json  library.properties  tgx.h
benchmark/2d/: COVERAGE.md  README.md  build_teensy.ps1  read_teensy_serial.ps1  run_cpu.ps1  upload_teensy.ps1
benchmark/2d/cpu/: CMakeLists.txt  tgx_2d_cpu_suite.cpp
benchmark/3d/: README.md  run_cpu.ps1
benchmark/3d/cpu/: CMakeLists.txt  tgx_3d_cpu_suite.cpp
benchmark/3d/mesh3d2_validation/: .gitignore  CMakeLists.txt  README.md  generate_assets.py  mesh3d2_validation.cpp  run.ps1
benchmark/tests/: CMakeLists.txt  blit_copy_validation.cpp  text_validation.cpp
docs/: _box2_8h.html  _box2_8h.js  _box2_8h_source.html  _box3_8h.html  _box3_8h_source.html  _color_8h.html  _color_8h_source.html  _d_1_2_programmation_2tgx_2src_2_image_8h-example.html  _fonts_8h.html  _fonts_8h_source.html  _image_8h.html  _image_8h.js  _image_8h_source.html  _mat4_8h.html  _mat4_8h_source.html  _mesh3_d_8h.html  _mesh3_d_8h_source.html  _misc_8h.html  _misc_8h_source.html  _rasterizer_8h.html  _rasterizer_8h.js  _rasterizer_8h_source.html  _renderer3_d_8h.html  _renderer3_d_8h_source.html  _shader_params_8h.html  _shader_params_8h.js  _shader_params_8h_source.html  _shaders_8h.html  _shaders_8h.js  _shaders_8h_source.html  _vec2_8h.html  _vec2_8h.js  _vec2_8h_source.html  _vec3_8h.html  _vec3_8h.js  _vec3_8h_source.html  _vec4_8h.html  _vec4_8h.js  _vec4_8h_source.html  annotated.html  (+135 more)
docs/doxygen-awesome-css/: README.md
docs/html/: _box2_8h.html  _box2_8h.js  _box2_8h_source.html  _box3_8h.html  _box3_8h.js  _box3_8h_source.html  _color_8h.html  _color_8h.js  _color_8h_source.html  _fonts_8h.html  _fonts_8h.js  _fonts_8h_source.html  _image_8h.html  _image_8h.js  _image_8h_source.html  _mat4_8h.html  _mat4_8h.js  _mat4_8h_source.html  _mesh3_d_8h.html  _mesh3_d_8h.js  _mesh3_d_8h_source.html  _mesh3_dv2_8h.html  _mesh3_dv2_8h.js  _mesh3_dv2_8h_source.html  _misc_8h.html  _misc_8h.js  _misc_8h_source.html  _rasterizer_8h.html  _rasterizer_8h.js  _rasterizer_8h_source.html  _renderer3_d_8h.html  _renderer3_d_8h.js  _renderer3_d_8h_source.html  _renderer3_d_flash_8h.html  _renderer3_d_flash_8h.js  _renderer3_d_flash_8h_source.html  _renderer3_d_spot_light_data_8h.html  _renderer3_d_spot_light_data_8h.js  _renderer3_d_spot_light_data_8h_source.html  _shader_params_8h.html  (+198 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  defines_0.js  enums_0.js  enums_1.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  files_2.js  files_4.js  files_6.js  functions_0.js  (+31 more)
examples/CPU/buddhaOnCPU/: CMakeLists.txt  buddha.h  buddhaOnCPU.cpp  buddha_v2.h
examples/ESP32-P4-Waveshare/: README.md
examples/ESP32-P4-Waveshare/characters/main/: CMakeLists.txt  main.cpp
examples/ESP32-P4-Waveshare/mars/main/: CMakeLists.txt  main.cpp
examples/ESP32-P4-Waveshare/test-shading_large/main/: CMakeLists.txt  main.cpp
examples/Waveshare/ESP32-P4-WIFI6-Touch-LCD-XC-Demo/components/tgx_idf/: CMakeLists.txt
examples/benchmark/: README.md  benchmark.ino  benchmark_multilight_helpers.h
examples/borg_cube/: borg_cube.ino  ili9341_t3n_font_Arial.h
examples/buddha/: buddha.ino
examples/characters/: characters.ino
examples/scream/: font_Arial_10.cpp  scream.ino
examples/test-shading/: test-shading.ino
examples/test-texture/: font_Arial_10.cpp  ili9341_t3n_font_Arial.h  test-texture.ino
extras - converters/: obj_to_h.ipynb  obj_to_h.py  readme.txt  texture_2_h.ipynb
extras - converters/.ipynb_checkpoints/: texture_2_h-checkpoint.ipynb
src/: Box2.h  Box3.h  Color.cpp  Color.h  Color.inl  Fonts.cpp  Fonts.h  Image.h  Image.inl  Mat4.h  Mesh3D.h  Mesh3D.inl  Mesh3D2.h  Mesh3D2_16.h  Mesh3D2_16b.h  Mesh3D3_16.h  Mesh3Dv2.h  Mesh3Dv2.inl  Misc.h  Rasterizer.h  Renderer3D.cpp  Renderer3D.h  Renderer3D.inl  Renderer3DFlash.h  Renderer3DSpotLightData.h  ShaderParams.h  Shaders.h  Vec2.h  Vec3.h  Vec4.h  bseg.h  font_tgx_Arial.cpp  font_tgx_Arial.h  font_tgx_Arial_Bold.cpp  font_tgx_Arial_Bold.h  font_tgx_OpenSans.cpp  font_tgx_OpenSans.h  font_tgx_OpenSans_Bold.cpp  font_tgx_OpenSans_Bold.h  font_tgx_OpenSans_Italic.cpp  (+3 more)
tools/: .gitignore  README.md  capture_serial.ps1  image_converter.ipynb  image_converter.py  obj_to_h.ipynb  obj_to_h.py  requirements.txt  texture_2_h.ipynb  texture_2_h.py  tgx_font.py  tgx_image.py  tgx_image_cli.py  tgx_image_gui.py  tgx_info.py  tgx_mesh.py  tgx_mesh_cli.py  tgx_mesh_gui.py  tgx_setup.py
tools/_internal/: README.md
tools/cli_tools/: README.md  tgx_font_cli.py  tgx_image_cli.py  tgx_info_cli.py  tgx_mesh_cli.py
tools/external_lib/: .gitignore  README.md
tools/inprogress/: Meshlets.ipynb  Untitled.ipynb  Untitled1.ipynb  leg_meshlet.ipynb  meshlet.ipynb  meshlet.par  meshlet.tsp  meshlet2.tsp  meshlet_last.ipynb  meshlet_res.txt  meshlets_new.ipynb
tools/legacy_tools/: README.md  image_converter.ipynb  image_converter.py  texture_2_h.py
tools/mesh3d2_converter/: README.md  __init__.py  cones.py  exporter.py  legacy_exporter.py  mesh.py  mesh3d_to_mesh3d2.py  mesh_inspect.py  meshlets.py  obj_loader.py  pipeline.py  preprocess.py  profiles.py  progress.py  quality.py  setup_stripifiers.py  stripifier.py  texture_exporter.py  tgx_mesh3d.py  tgx_mesh3d2.py  validate.py  viewer.py  visibility.py
tools/modules/: __init__.py
tools/validation/: README.md
validation/: README.md  roadmap.txt
validation/benchmark3d/idf/tgx_benchmark3d/main/: CMakeLists.txt  app_main.cpp
validation/performance/investigations/2026-06-26-spotlight-specraw-optimization/cpu_compare/: CMakeLists.txt  spotlight_cpu_compare.cpp
(+2318 files in other folders)
